xee-xpath-outer/tests/snapshots/xpath__cast_empty_sequence_as_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() cast as xs:string\")"
---
Err(
    SpannedError {
        error: XPTY0004,
        span: SourceSpan(
            0,
            20,
        ),
    },
)
