xee-xpath-outer/tests/snapshots/xpath__cast_empty_sequence_as_string_question_mark.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() cast as xs:string?\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
