xee-xpath-outer/tests/snapshots/xpath__cast_g_day.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'---01' cast as xs:gDay\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GDay(
                    GDay {
                        day: 1,
                        offset: None,
                    },
                ),
            ),
        ),
    },
)
