xee-xpath-outer/tests/snapshots/xpath__cast_g_month_day_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('--06-21' cast as xs:gMonthDay) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "--06-21",
                ),
            ),
        ),
    },
)
