xee-xpath-outer/tests/snapshots/xpath__cast_g_month_day_tz.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'--01-01Z' cast as xs:gMonthDay\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                GMonthDay(
                    GMonthDay {
                        month: 1,
                        day: 1,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
