xee-xpath-outer/tests/snapshots/xpath__cast_g_year_month_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('2019-01' cast as xs:gYearMonth) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "2019-01",
                ),
            ),
        ),
    },
)
