xee-xpath-outer/tests/snapshots/xpath__cast_time_z.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'00:00:00Z' cast as xs:time\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Time(
                    NaiveTimeWithOffset {
                        time: 00:00:00,
                        offset: Some(
                            +00:00,
                        ),
                    },
                ),
            ),
        ),
    },
)
