xee-xpath-outer/tests/snapshots/xpath__castable_as_integer_empty_sequence_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() castable as xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
