xee-xpath-outer/tests/snapshots/xpath__castable_as_integer_success.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 castable as xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
