xee-xpath-outer/tests/snapshots/xpath__compare_general_eq_sequence_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) = (3, 4)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
